fix spacing of episode name and timestamp

--- a/src/component/MovieData/MovieData.scss
+++ b/src/component/MovieData/MovieData.scss
@@ -140,6 +140,19 @@
             }
           }
         }
+        .zg-movie-instances {
+          .zg-timestamps {
+            .zg-timestamp {
+              .zg-episode-reference {
+                margin-bottom: 5px;
+                .zg-season-number {
+                }
+              }
+              .zg-timestamp-link {
+              }
+            }
+          }
+        }
       }
     }
   }
